--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -15,6 +15,13 @@ jobs:
       run: python --version
     - name: pip install
       run: pip install -r requirements.txt
+
+    - name: download dataset
+      run: wget -O data/mountains_vs_beaches_preferences.csv ${{github.event.client_payload.dataseturl}}
+    - name: cat dataset
+      run: cat data/mountains_vs_beaches_preferences.csv
+
+      
     - name: train model
       run: python model/train.py
     - name: docker build
